<resources>
    <string name="app_launcher_name">Dsremo Gallery</string>
    <string name="my_website">https://github.com/dsremo/Gallery</string>
    <string name="donate_url">https://github.com/dsremo/Gallery</string>
    <string name="my_email"></string>
    <string name="my_fake_email"></string>
    <string name="dsremo_about_title">Gallery</string>
    <string name="dsremo_about_body">Version %1$s\n\nBased on Fossify Gallery (GPL-3.0). Modified 2026 by dsremo.\n\nSource code: https://github.com/dsremo/Gallery\nLicense: GNU GPL v3.0</string>
    <string name="dsremo_about_source">View source code</string>
    <string name="dsremo_about_license">License</string>
    <string name="dsremo_source_url">https://github.com/dsremo/Gallery</string>
    <string name="dsremo_license_url">https://www.gnu.org/licenses/gpl-3.0.en.html</string>
    <string name="dsremo_find_duplicates">Find duplicate photos</string>
    <string name="dsremo_search">Search photos</string>
    <string name="dsremo_strip_location">Strip location from all photos</string>
    <string name="dsremo_compress_photos">Compress photos</string>
    <string name="edit">Edit</string>
    <string name="open_camera">Open camera</string>
    <string name="hidden">(hidden)</string>
    <string name="excluded">(excluded)</string>
    <string name="pin_folder">Pin folder</string>
    <string name="unpin_folder">Unpin folder</string>
    <string name="pin_to_the_top">Pin to the top</string>
    <string name="show_all">Show all folders content</string>
    <string name="all_folders">All folders</string>
    <string name="folder_view">Switch to folder view</string>
    <string name="other_folder">Other folder</string>
    <string name="show_on_map">Show on map</string>
    <string name="unknown_location">Unknown location</string>
    <string name="volume">Volume</string>
    <string name="brightness">Brightness</string>
    <string name="lock_orientation">Lock orientation</string>
    <string name="unlock_orientation">Unlock orientation</string>
    <string name="change_orientation">Change orientation</string>
    <string name="force_portrait">Force portrait</string>
    <string name="force_landscape">Force landscape</string>
    <string name="force_landscape_reverse">Force landscape (reverse)</string>
    <string name="use_default_orientation">Use default orientation</string>
    <string name="fix_date_taken">Fix Date Taken value</string>
    <string name="fixing">Fixing…</string>
    <string name="dates_fixed_successfully">Dates fixed successfully</string>
    <string name="no_date_takens_found">No Date Taken values have been found</string>
    <string name="share_resized">Share a resized version</string>
    <string name="switch_to_file_search">Switch to file search across all visible folders</string>
    <string name="set_as_default_folder">Set as default folder</string>
    <string name="unset_as_default_folder">Unset as default folder</string>
    <string name="reorder_by_dragging">Reorder folders by dragging</string>
    <string name="reorder_by_dragging_pro">Reorder folders by dragging (Pro)</string>
    <string name="restore_to_path">Restoring to \'%s\'</string>
    <plurals name="restore_confirmation">
        <item quantity="one">Are you sure you want to restore %d file?</item>
        <item quantity="other">Are you sure you want to restore %d files?</item>
    </plurals>
    <string name="full_storage_permission_required">Gallery needs full access to display all your photos and videos. Go to Settings > Permissions > Photos and videos > Allow all.</string>
    <string name="filter_media">Filter media</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="gifs">GIFs</string>
    <string name="raw_images">RAW images</string>
    <string name="svgs">SVGs</string>
    <string name="portraits">Portraits</string>
    <string name="no_media_with_filters">No media files have been found with the selected filters.</string>
    <string name="change_filters_underlined"><u>Change filters</u></string>
    <string name="hide_folder_description">This function hides the folder by adding a \'.nomedia\' file into it, it will hide all subfolders too. You can see them by toggling the \'Show hidden items\' option in Settings. Continue?</string>
    <string name="exclude_folder_description">This will exclude the selection together with its subfolders from Gallery only. You can manage excluded folders in Settings.</string>
    <string name="exclude_folder_parent">Exclude a parent instead?</string>
    <string name="excluded_activity_placeholder">Excluding folders will make them together with their subfolders hidden just in Gallery, they will still be visible in other applications.\n\nIf you want to hide them from other apps too, use the Hide function.</string>
    <string name="hidden_folders">Hidden folders</string>
    <string name="manage_hidden_folders">Manage hidden folders</string>
    <string name="hidden_folders_placeholder">Seems like you don\'t have any folders hidden with a \".nomedia\" file.</string>
    <string name="hidden_all_files">You have to grant the app All Files access to see hidden files, else it cannot work.</string>
    <string name="cant_unhide_folder">If a folder or one of its parent folders has a dot before its name, it is hidden and cannot be unhidden like this. You have to remove the dot by renaming it.</string>
    <string name="include_folders">Included folders</string>
    <string name="manage_included_folders">Manage included folders</string>
    <string name="add_folder">Add folder</string>
    <string name="included_activity_placeholder">If you have some folders which contain media, but were not recognized by the app, you can add them manually here.\n\nAdding some items here will not exclude any other folder.</string>
    <string name="no_media_add_included">No media files have been found. You can solve it by adding the folders containing media files manually.</string>
    <string name="resize_and_save">Resize selection and save</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="keep_aspect_ratio">Keep aspect ratio</string>
    <string name="invalid_values">Please enter a valid resolution</string>
    <string name="resize_multiple_images">Resize multiple images</string>
    <string name="resize_factor">Resize factor</string>
    <string name="resize_factor_info">Resize images to the given percentage, value must be within 10 and 90.</string>
    <string name="resize_factor_error">Enter a number between 10 and 90</string>
    <plurals name="failed_to_resize_images">
        <item quantity="one">Failed to resize %d image</item>
        <item quantity="other">Failed to resize %d images</item>
    </plurals>
    <string name="images_resized_successfully">Images resized successfully</string>
    <string name="editor">Editor</string>
    <string name="basic_editor">Basic Editor</string>
    <string name="advanced_editor">Advanced Editor</string>
    <string name="rotate">Rotate</string>
    <string name="invalid_image_path">Invalid image path</string>
    <string name="invalid_video_path">Invalid video path</string>
    <string name="image_editing_failed">Image editing failed</string>
    <string name="video_editing_failed">Video editing failed</string>
    <string name="image_editing_cancelled">Image editing cancelled</string>
    <string name="video_editing_cancelled">Video editing cancelled</string>
    <string name="file_edited_successfully">File edited successfully</string>
    <string name="image_edited_successfully">Image edited successfully</string>
    <string name="video_edited_successfully">Video edited successfully</string>
    <string name="edit_image_with">Edit image with:</string>
    <string name="edit_video_with">Edit video with:</string>
    <string name="no_image_editor_found">No image editor found</string>
    <string name="no_video_editor_found">No video editor found</string>
    <string name="unknown_file_location">Unknown file location</string>
    <string name="overwrite_original">Overwrite original</string>
    <string name="error_saving_file">Could not overwrite the source file</string>
    <string name="rotate_left">Rotate left</string>
    <string name="rotate_right">Rotate right</string>
    <string name="rotate_one_eighty">Rotate by 180º</string>
    <string name="transform">Transform</string>
    <string name="crop">Crop</string>
    <string name="draw">Draw</string>
    <string name="flip">Flip</string>
    <string name="flip_horizontally">Flip horizontally</string>
    <string name="flip_vertically">Flip vertically</string>
    <string name="free_aspect_ratio">Free</string>
    <string name="other_aspect_ratio">Other</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="set_as_wallpaper">Set as Wallpaper</string>
    <string name="set_as_wallpaper_failed">Setting as Wallpaper failed</string>
    <string name="set_as_wallpaper_with">Set as wallpaper with:</string>
    <string name="setting_wallpaper">Setting wallpaper&#8230;</string>
    <string name="wallpaper_set_successfully">Wallpaper set successfully</string>
    <string name="portrait_aspect_ratio">Portrait aspect ratio</string>
    <string name="landscape_aspect_ratio">Landscape aspect ratio</string>
    <string name="home_screen">Home screen</string>
    <string name="lock_screen">Lock screen</string>
    <string name="home_and_lock_screen">Home and lock screen</string>
    <string name="allow_changing_aspect_ratio">Allow changing the aspect ratio</string>
    <string name="slideshow">Slideshow</string>
    <string name="interval">Interval</string>
    <string name="include_photos">Include photos</string>
    <string name="include_videos">Include videos</string>
    <string name="include_gifs">Include GIFs</string>
    <string name="random_order">Random order</string>
    <string name="move_backwards">Move backwards</string>
    <string name="loop_slideshow">Loop slideshow</string>
    <string name="animation">Animation</string>
    <string name="no_animation">None</string>
    <string name="fade">Fade</string>
    <string name="slide">Slide</string>
    <string name="slideshow_ended">The slideshow ended</string>
    <string name="no_media_for_slideshow">No media for the slideshow have been found</string>
    <string name="group_direct_subfolders">Group direct subfolders</string>
    <string name="animate_gifs">Animate GIFs at thumbnails</string>
    <string name="screen_rotation_by">Rotate fullscreen media by</string>
    <string name="screen_rotation_system_setting">System setting</string>
    <string name="hide_system_ui_at_fullscreen">Automatically hide system UI at fullscreen media</string>
    <string name="delete_empty_folders">Delete empty folders after deleting their content</string>
    <string name="keep_screen_on_fullscreen_photos">Keep the screen on while viewing fullscreen photos</string>
    <string name="allow_photo_gestures">Allow controlling photo brightness with vertical gestures</string>
    <string name="allow_instant_change">Allow instantly changing media by clicking on screen sides</string>
    <string name="allow_deep_zooming_images">Allow deep zooming images</string>
    <string name="allow_down_gesture">Allow closing the fullscreen view with a down gesture</string>
    <string name="allow_one_to_one_zoom">Allow 1:1 zooming in with two double taps</string>
    <string name="allow_rotating_gestures">Allow rotating images with gestures</string>
    <string name="file_loading_priority">File loading priority</string>
    <string name="compromise">Compromise</string>
    <string name="search_all_files">Search all files instead of folders on the main screen</string>
    <string name="manage_bottom_actions">Manage visible bottom actions</string>
    <string name="dsremo_show_smart_albums">Show smart albums (Today, Yesterday, This Week…)</string>
</resources>