<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_advanced_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <org.fossify.commons.views.MyAppBarLayout
        android:id="@+id/settings_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/settings_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/color_primary"
            app:title="Advanced"
            app:titleTextAppearance="@style/AppTheme.ActionBar.TitleTextStyle" />

    </org.fossify.commons.views.MyAppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/settings_nested_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/settings_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/settings_animate_gifs_holder"
                style="@style/SettingsHolderSwitchStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <org.fossify.commons.views.MyMaterialSwitch
                    android:id="@+id/settings_animate_gifs"
                    style="@style/SettingsSwitchStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/animate_gifs" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/settings_search_all_files_holder"
                style="@style/SettingsHolderSwitchStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <org.fossify.commons.views.MyMaterialSwitch
                    android:id="@+id/settings_search_all_files"
                    style="@style/SettingsSwitchStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/search_all_files" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/settings_show_hidden_items_holder"
                style="@style/SettingsHolderSwitchStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <org.fossify.commons.views.MyMaterialSwitch
                    android:id="@+id/settings_show_hidden_items"
                    style="@style/SettingsSwitchStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/show_hidden_items" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/settings_dsremo_show_smart_albums_holder"
                style="@style/SettingsHolderSwitchStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <org.fossify.commons.views.MyMaterialSwitch
                    android:id="@+id/settings_dsremo_show_smart_albums"
                    style="@style/SettingsSwitchStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dsremo_show_smart_albums" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/settings_file_loading_priority_holder"
                style="@style/SettingsHolderTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <org.fossify.commons.views.MyTextView
                    android:id="@+id/settings_file_loading_priority_label"
                    style="@style/SettingsTextLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/file_loading_priority" />

                <org.fossify.commons.views.MyTextView
                    android:id="@+id/settings_file_loading_priority"
                    style="@style/SettingsTextValueStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/settings_file_loading_priority_label"
                    tools:text="@string/compromise" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/settings_screen_rotation_holder"
                style="@style/SettingsHolderTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <org.fossify.commons.views.MyTextView
                    android:id="@+id/settings_screen_rotation_label"
                    style="@style/SettingsTextLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/screen_rotation_by" />

                <org.fossify.commons.views.MyTextView
                    android:id="@+id/settings_screen_rotation"
                    style="@style/SettingsTextValueStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/settings_screen_rotation_label"
                    tools:text="@string/screen_rotation_system_setting" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/settings_hide_system_ui_holder"
                style="@style/SettingsHolderSwitchStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <org.fossify.commons.views.MyMaterialSwitch
                    android:id="@+id/settings_hide_system_ui"
                    style="@style/SettingsSwitchStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hide_system_ui_at_fullscreen" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/settings_keep_screen_on_fullscreen_photos_holder"
                style="@style/SettingsHolderSwitchStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <org.fossify.commons.views.MyMaterialSwitch
                    android:id="@+id/settings_keep_screen_on_fullscreen_photos"
                    style="@style/SettingsSwitchStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/keep_screen_on_fullscreen_photos" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/settings_allow_photo_gestures_holder"
                style="@style/SettingsHolderSwitchStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <org.fossify.commons.views.MyMaterialSwitch
                    android:id="@+id/settings_allow_photo_gestures"
                    style="@style/SettingsSwitchStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/allow_photo_gestures" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/settings_allow_down_gesture_holder"
                style="@style/SettingsHolderSwitchStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <org.fossify.commons.views.MyMaterialSwitch
                    android:id="@+id/settings_allow_down_gesture"
                    style="@style/SettingsSwitchStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/allow_down_gesture" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/settings_allow_zooming_images_holder"
                style="@style/SettingsHolderSwitchStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <org.fossify.commons.views.MyMaterialSwitch
                    android:id="@+id/settings_allow_zooming_images"
                    style="@style/SettingsSwitchStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/allow_deep_zooming_images" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/settings_allow_rotating_with_gestures_holder"
                style="@style/SettingsHolderSwitchStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <org.fossify.commons.views.MyMaterialSwitch
                    android:id="@+id/settings_allow_rotating_with_gestures"
                    style="@style/SettingsSwitchStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/allow_rotating_gestures" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/settings_allow_one_to_one_zoom_holder"
                style="@style/SettingsHolderSwitchStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <org.fossify.commons.views.MyMaterialSwitch
                    android:id="@+id/settings_allow_one_to_one_zoom"
                    style="@style/SettingsSwitchStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/allow_one_to_one_zoom" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/settings_allow_instant_change_holder"
                style="@style/SettingsHolderSwitchStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <org.fossify.commons.views.MyMaterialSwitch
                    android:id="@+id/settings_allow_instant_change"
                    style="@style/SettingsSwitchStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/allow_instant_change" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/settings_manage_included_folders_holder"
                style="@style/SettingsHolderTextViewOneLinerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <org.fossify.commons.views.MyTextView
                    android:id="@+id/settings_manage_included_folders"
                    style="@style/SettingsTextLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manage_included_folders" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/settings_manage_excluded_folders_holder"
                style="@style/SettingsHolderTextViewOneLinerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <org.fossify.commons.views.MyTextView
                    android:id="@+id/settings_manage_excluded_folders"
                    style="@style/SettingsTextLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manage_excluded_folders" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/settings_manage_hidden_folders_holder"
                style="@style/SettingsHolderTextViewOneLinerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <org.fossify.commons.views.MyTextView
                    android:id="@+id/settings_manage_hidden_folders"
                    style="@style/SettingsTextLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manage_hidden_folders" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/settings_manage_bottom_actions_holder"
                style="@style/SettingsHolderTextViewOneLinerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <org.fossify.commons.views.MyTextView
                    android:id="@+id/settings_manage_bottom_actions"
                    style="@style/SettingsTextLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manage_bottom_actions" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/settings_delete_empty_folders_holder"
                style="@style/SettingsHolderSwitchStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <org.fossify.commons.views.MyMaterialSwitch
                    android:id="@+id/settings_delete_empty_folders"
                    style="@style/SettingsSwitchStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_empty_folders" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/settings_keep_last_modified_holder"
                style="@style/SettingsHolderSwitchStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <org.fossify.commons.views.MyMaterialSwitch
                    android:id="@+id/settings_keep_last_modified"
                    style="@style/SettingsSwitchStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/keep_last_modified" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/settings_skip_delete_confirmation_holder"
                style="@style/SettingsHolderSwitchStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <org.fossify.commons.views.MyMaterialSwitch
                    android:id="@+id/settings_skip_delete_confirmation"
                    style="@style/SettingsSwitchStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/skip_delete_confirmation" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/settings_clear_cache_holder"
                style="@style/SettingsHolderTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <org.fossify.commons.views.MyTextView
                    android:id="@+id/settings_clear_cache_label"
                    style="@style/SettingsTextLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clear_cache" />

                <org.fossify.commons.views.MyTextView
                    android:id="@+id/settings_clear_cache_size"
                    style="@style/SettingsTextValueStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/settings_clear_cache_label"
                    tools:text="0 B" />
            </RelativeLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
